--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Upload to S3
         run: |
-          aws s3 cp main.tf s3://instance-user-data/terraform-modules/terraform-aws-ec2-instance-profile/
-          aws s3 cp outputs.tf s3://instance-user-data/terraform-modules/terraform-aws-ec2-instance-profile/
-          aws s3 cp variables.tf s3://instance-user-data/terraform-modules/terraform-aws-ec2-instance-profile/
-          aws s3 cp LICENSE s3://instance-user-data/terraform-modules/terraform-aws-ec2-instance-profile/
+          aws s3 cp main.tf s3://terraform-registry-wecoach/terraform-aws-ec2-instance-profile/main.tf
+          aws s3 cp outputs.tf s3://terraform-registry-wecoach/terraform-aws-ec2-instance-profile/outputs.tf
+          aws s3 cp variables.tf s3://terraform-registry-wecoach/terraform-aws-ec2-instance-profile/variables.tf
+          aws s3 cp LICENSE s3://terraform-registry-wecoach/terraform-aws-ec2-instance-profile/LICENSE
